fix: port mq core to java8